--- a/style/style.css
+++ b/style/style.css
@@ -126,5 +126,23 @@ main section{
   .resume-download{
     margin-top: 30px;
   }
+  footer{
+    display: flex;
+    padding: 130px 200px;
+    gap: 100px;
+  }
+.footer-column{
+  width: 50%;
+}
+footer input[type="text"], footer input[type="email"],footer textarea{
+  height: 64px;
+  border-radius: 5px;
+  background-color: white;
+  display: block;
+  width: 100%;
+  padding: 10px 20px;
+  margin-bottom: 24px;
+  border: none;
 
+}
   
